# swe-bench-zeno

./: .gitignore  EXAMPLE_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  README.md  acquire_data.py  analyze_cases.py  analyze_performance.py  data_utils.py  download_issues.py  experiments.ipynb  feature_engineering.py  generate_verified_visualization.py  leaderboard_to_zeno.py  optimize_f1.py  pyproject.toml  requirements.txt  test_data.jsonl  test_data_aider.jsonl  test_visualize_results.py  visualize_results.py
analysis/: __main__.py  advanced_features.py  analyze_metrics.py  analyze_performance.py  code_structure.py  data.py  download_data.py  features.py  performance_gap.py
analysis/features/: __init__.py  code_metrics.py  dependency_metrics.py  error_metrics.py  patch.py  type_metrics.py
analysis/metrics/: __init__.py  apply_metrics.py  code_metrics.py  dependency_metrics.py  error_metrics.py  instance_metrics.py  metrics.py  patch_metrics.py  type_metrics.py
analysis/models/: __init__.py  data.py  patch.py
analysis/notes/: CASE_ANALYSIS.md  OPTIMAL_FEATURES.md  PRECISION_RECALL_ANALYSIS.md  TOP_FEATURES.md
tests/: test_visualization.py
tests/test_data/: test.swebench_eval.jsonl  test_aider_output.jsonl  test_output.jsonl
