[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
zeno-client = "^0.1.16"
swe-bench = {git = "https://github.com/csmith49/swe-bench.git"}
click = "^8.1.7"
scikit-learn = "^1.6.1"
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
